Fix video section and thank you images

--- a/food.html
+++ b/food.html
@@ -234,8 +234,8 @@
                         <!-- Thumbnail Image with Play Button -->
                         <div id="thumbnailWrapper" class="thumbnail-wrapper">
                             <img id="thumbnail"
-                                src="https://img.freepik.com/free-photo/fresh-fruit-salad-bowl-healthy-food-concept-generative-ai_188544-12345.jpg?w=1060"
-                                alt="Healthy Food" width="1480" height="986" class="thumbnail-img"
+                                src="https://img.freepik.com/free-photo/fresh-vegetables-fruits-fuit-basket_144627-45163.jpg?w=1480"
+                                alt="Fresh Healthy Food" width="1480" height="986" class="thumbnail-img"
                                 style="display: block;">
                             <div class="play-button-overlay">
                                 <button class="play-button" onclick="showVideo()">
@@ -251,7 +251,8 @@
                         <!-- Hidden Video -->
                         <div id="videoWrapper" style="display:none; position: relative;">
                             <video id="fruitVideo" width="1480" height="986" class="video-player" controls>
-                                <source src="https://cdn.pixabay.com/video/2019/06/03/24359-339129256_large.mp4"
+                                <source
+                                    src="https://cdn.coverr.co/videos/coverr-preparing-healthy-salad-in-the-kitchen-2432/1080p.mp4"
                                     type="video/mp4">
                                 Your browser does not support video.
                             </video>
@@ -370,7 +371,7 @@
                             </div>
                         </div>
                         <div class="d-md-none mt-4 mb-4">
-                            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png"
+                            <img src="https://img.freepik.com/free-vector/thank-you-placard-concept-illustration_114360-13436.jpg?w=740"
                                 class="thank-you-image-mobile w-100">
                         </div>
                         <button type="button" class="redeem-button" data-toggle="modal" data-target="#exampleModal">
@@ -380,7 +381,7 @@
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block order-md-2 order-1">
                     <div class="thank-you-image-wrapper">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png"
+                        <img src="https://img.freepik.com/free-vector/thank-you-placard-concept-illustration_114360-13436.jpg?w=740"
                             class="thank-you-image">
                     </div>
                 </div>
