--- a/food.html
+++ b/food.html
@@ -234,7 +234,7 @@
                         <!-- Thumbnail Image with Play Button -->
                         <div id="thumbnailWrapper" class="thumbnail-wrapper">
                             <img id="thumbnail"
-                                src="https://img.freepik.com/free-photo/fresh-vegetables-fruits-fuit-basket_144627-45163.jpg?w=1480"
+                                src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1480&q=80"
                                 alt="Fresh Healthy Food" width="1480" height="986" class="thumbnail-img"
                                 style="display: block;">
                             <div class="play-button-overlay">
@@ -252,7 +252,7 @@
                         <div id="videoWrapper" style="display:none; position: relative;">
                             <video id="fruitVideo" width="1480" height="986" class="video-player" controls>
                                 <source
-                                    src="https://cdn.coverr.co/videos/coverr-preparing-healthy-salad-in-the-kitchen-2432/1080p.mp4"
+                                    src="https://media.istockphoto.com/id/2257127887/video/healthy-vegan-lunch-bowl-with-avocado-sweet-potato-kale-and-vegetables-slow-rotating-zoom.mp4?s=mp4-640x640-is&k=20&c=g4WSeKQO6rx0TgnnWCuM_P53jWfVpNZWBwu4gMBvslU="
                                     type="video/mp4">
                                 Your browser does not support video.
                             </video>
