Fix claim gift modal image

--- a/food.html
+++ b/food.html
@@ -402,7 +402,7 @@
                         </button>
                     </div>
                     <div class="modal-body thank-you-modal-body">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/gift-voucher-img.png"
+                        <img src="https://img.freepik.com/free-vector/gift-card-concept-illustration_114360-14197.jpg?w=740"
                             class="w-100 gift-voucher-image">
                     </div>
                     <div class="modal-footer thank-you-modal-footer">
