--- a/add-recipe.html
+++ b/add-recipe.html
@@ -113,7 +113,7 @@
                                 <h3 class="section-title">Add Media</h3>
                             </div>
 
-                            <!-- Image Upload -->
+                            <!-- Image File Upload -->
                             <div class="form-group">
                                 <label for="foodImage" class="form-label">📷 Recipe Image</label>
                                 <div class="custom-file-upload">
@@ -121,33 +121,24 @@
                                     <label for="foodImage" class="file-label">
                                         <div class="upload-icon">📸</div>
                                         <div class="upload-text">Click to upload or drag image here</div>
-                                        <div class="upload-subtext">PNG, JPG, GIF up to 5MB</div>
+                                        <div class="upload-subtext">PNG, JPG, GIF, WebP up to 5MB</div>
                                     </label>
                                     <div id="imagePreview" class="image-preview mt-3" style="display: none;">
-                                        <img id="previewImg" src="" alt="Preview" class="preview-img">
-                                        <button type="button" class="btn btn-sm btn-danger mt-3"
+                                        <img id="previewImg" src="" alt="Preview" class="preview-img"
+                                            style="max-width:100%;border-radius:8px;">
+                                        <button type="button" class="btn btn-sm btn-danger mt-2"
                                             onclick="clearImagePreview()">✕ Remove Image</button>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Video Upload -->
+                            <!-- Video URL (optional) -->
                             <div class="form-group">
-                                <label for="foodVideo" class="form-label">🎥 Recipe Video <span
+                                <label for="foodVideoUrl" class="form-label">🎥 Recipe Video URL <span
                                         class="optional">(Optional)</span></label>
-                                <div class="custom-file-upload">
-                                    <input type="file" id="foodVideo" class="form-control-file" accept="video/*">
-                                    <label for="foodVideo" class="file-label">
-                                        <div class="upload-icon">🎬</div>
-                                        <div class="upload-text">Click to upload or drag video here</div>
-                                        <div class="upload-subtext">MP4, WebM up to 50MB</div>
-                                    </label>
-                                    <div id="videoPreview" class="video-preview mt-3" style="display: none;">
-                                        <video id="previewVideo" class="preview-video" controls></video>
-                                        <button type="button" class="btn btn-sm btn-danger mt-3"
-                                            onclick="clearVideoPreview()">✕ Remove Video</button>
-                                    </div>
-                                </div>
+                                <input type="url" class="form-control" id="foodVideoUrl"
+                                    placeholder="https://example.com/my-recipe-video.mp4">
+                                <small class="form-hint">Paste a direct link to your recipe video (optional)</small>
                             </div>
                         </div>
 
@@ -166,7 +157,7 @@
     </div>
 
     <script>
-        // Image Preview
+        // Image file preview
         document.getElementById('foodImage').addEventListener('change', function (e) {
             const file = e.target.files[0];
             if (file) {
@@ -174,34 +165,14 @@
                 reader.onload = function (event) {
                     document.getElementById('previewImg').src = event.target.result;
                     document.getElementById('imagePreview').style.display = 'block';
-                }
+                };
                 reader.readAsDataURL(file);
             }
         });
 
-        // Video Preview
-        document.getElementById('foodVideo').addEventListener('change', function (e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (event) {
-                    document.getElementById('previewVideo').src = event.target.result;
-                    document.getElementById('videoPreview').style.display = 'block';
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-
-        // Clear Image Preview
         function clearImagePreview() {
             document.getElementById('foodImage').value = '';
             document.getElementById('imagePreview').style.display = 'none';
-        }
-
-        // Clear Video Preview
-        function clearVideoPreview() {
-            document.getElementById('foodVideo').value = '';
-            document.getElementById('videoPreview').style.display = 'none';
         }
 
         // Load categories from API
@@ -209,6 +180,11 @@
             try {
                 const response = await fetch('/categories');
                 const categories = await response.json();
+
+                if (!response.ok) {
+                    throw new Error(categories.error || 'Failed to load categories');
+                }
+
                 const select = document.getElementById('recipeCategory');
                 select.innerHTML = '<option value="">-- Select Category --</option>';
                 categories.forEach(cat => {
@@ -219,69 +195,62 @@
                 });
             } catch (error) {
                 console.error('Error loading categories:', error);
-                alert('Error loading categories. Make sure the backend is running.');
+                alert('Error loading categories: ' + error.message);
             }
         }
 
         // Load categories when page loads
         loadCategories();
 
-        // Form Submission
+        // Form Submission — uses FormData to support file upload
         document.getElementById('recipeForm').addEventListener('submit', async function (e) {
             e.preventDefault();
 
-            const title = document.getElementById('recipeTitle').value;
-            const description = document.getElementById('recipeDescription').value;
-            const ingredients = document.getElementById('ingredients').value;
+            const title = document.getElementById('recipeTitle').value.trim();
+            const description = document.getElementById('recipeDescription').value.trim();
+            const ingredients = document.getElementById('ingredients').value.trim();
             const categoryId = document.getElementById('recipeCategory').value;
+            const videoUrl = document.getElementById('foodVideoUrl').value.trim();
+            const imageFile = document.getElementById('foodImage').files[0];
 
             if (!categoryId) {
                 alert('Please select a category');
                 return;
             }
 
-            // Get image as base64 if uploaded
-            let imageUrl = null;
-            const imageFile = document.getElementById('foodImage').files[0];
-            if (imageFile) {
-                const reader = new FileReader();
-                reader.onload = async function (e) {
-                    imageUrl = e.target.result; // base64 data URL
-                    await submitRecipe(title, description, ingredients, categoryId, imageUrl);
-                };
-                reader.readAsDataURL(imageFile);
-            } else {
-                await submitRecipe(title, description, ingredients, categoryId, null);
-            }
-        });
-
-        async function submitRecipe(title, description, ingredients, categoryId, imageUrl) {
+            // Read user_id from localStorage
+            let userId = 1;
             try {
-                // For now, use user_id = 1 (you can get this from login later)
-                const userId = 1;
+                const raw = localStorage.getItem('fm_user_profile');
+                if (raw) {
+                    const profile = JSON.parse(raw);
+                    if (profile && profile.id) userId = profile.id;
+                }
+            } catch (e) { console.error(e); }
 
+            // Build FormData (supports file upload)
+            const formData = new FormData();
+            formData.append('user_id', userId);
+            formData.append('category_id', categoryId);
+            formData.append('title', title);
+            formData.append('description', description);
+            formData.append('ingredients_text', ingredients);
+            if (videoUrl) formData.append('video_url', videoUrl);
+            if (imageFile) formData.append('image', imageFile);
+
+            try {
+                // Do NOT set Content-Type — browser sets it with boundary automatically
                 const response = await fetch('/recipes', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        user_id: userId,
-                        category_id: parseInt(categoryId),
-                        title: title,
-                        description: description,
-                        ingredients_text: ingredients,
-                        image_url: imageUrl,
-                        video_url: null
-                    })
+                    body: formData
                 });
 
                 const result = await response.json();
 
                 if (response.ok) {
-                    alert(`Recipe "${title}" uploaded successfully!`);
+                    alert(`Recipe "${title}" added successfully! 🎉`);
 
-                    // Update localStorage (optional)
+                    // Update recipe count in localStorage
                     try {
                         const raw = localStorage.getItem('fm_user_profile');
                         const profile = raw ? JSON.parse(raw) : {};
@@ -289,12 +258,9 @@
                         localStorage.setItem('fm_user_profile', JSON.stringify(profile));
                     } catch (e) { console.error(e); }
 
-                    // Reset form
+                    // Reset form and redirect
                     document.getElementById('recipeForm').reset();
                     document.getElementById('imagePreview').style.display = 'none';
-                    document.getElementById('videoPreview').style.display = 'none';
-
-                    // Redirect to home page
                     window.location.href = 'food.html';
                 } else {
                     alert('Error: ' + (result.error || 'Failed to save recipe'));
@@ -303,7 +269,7 @@
                 console.error('Error submitting recipe:', error);
                 alert('Network error. Make sure the backend is running.');
             }
-        }
+        });
 
         // Load user profile photo on page load
         (function () {
